tests/fixtures/invalid/index_label_as_value.gcl
// Error: named index labels are index positions, not values.
index Maneuver = { A, B };

node x: Dimensionless = Maneuver.A;
